crates/reinhardt-template/crates/templates-macros/tests/ui/fail/parent_directory.stderr
error: Template path must not contain parent directory references (..)
       This is a security measure to prevent path traversal attacks.
       Example: template!("emails/welcome.html") instead of template!("../etc/passwd")
 --> tests/ui/fail/parent_directory.rs:4:23
  |
4 |     let _ = template!("../etc/passwd");
  |                       ^^^^^^^^^^^^^^^
